rns-lang/test_data/integration_to_be_migrated/error/parser/class_directive/header/trailing_tokens/integer.ja
.class public HelloWorld 42
.super java/lang/Object
